--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
@@ -90,7 +90,8 @@
 }
 @mixin test-border {
     box-sizing: border-box;
-    border: 1px solid var(--highlightColor);
+    // border: 1px solid var(--highlightColor);
+    border: 1px solid red;
 }
 @mixin nav-slots {
     visibility: visible;
@@ -1027,6 +1028,7 @@
     }
     // blur overlay bg for policies and terms popups
     .overlay-blurbg {
+        z-index: 12;
         position: fixed;
         width: 100%;
         height: 100%;
@@ -1361,6 +1363,7 @@
     // loading
     .loading {
         // loading circle
+        z-index: 12;
         position: fixed;
         top: 50%;
         left: 50%;
@@ -1414,7 +1417,8 @@
     position: relative;
     transform: translateX(-50%);
     left: 50%;
-    background: linear-gradient(to right, rgb(0,128,255), rgb(0,0,255), rgb(0,128,255));
+    filter: drop-shadow(0px 0px 10px rgb(0,0,0));
+    // background: linear-gradient(to right, rgb(0,128,255), rgb(0,0,255), rgb(0,128,255));
     .section-auth__gobackhome {
         z-index: 20;
         position: absolute;
@@ -1432,10 +1436,10 @@
         font-size: 24px;
         transition: $ease-fx;
         &:hover {
-            border: 2px solid rgb(255,255,0);
-            background: radial-gradient(rgb(255,255,255), rgb(255,255,0));
-            color: rgb(255,255,255);
-            filter: drop-shadow(0px 0px 15px rgb(255,255,0));
+            border: 2px solid rgb(255,255,255);
+            background: radial-gradient(rgb(255,255,255), rgb(255,255,255));
+            color: rgb(16,16,16);
+            filter: drop-shadow(0px 0px 20px rgb(255,255,255)) brightness(5.0) contrast(1.1);
         }
     }
     .section-auth__buttons {
@@ -1495,6 +1499,7 @@
             row-gap: 5px;
             width: 100%;
             margin-left: 20px;
+            transition: $ease-fx;
             &_email {
                 font-size: 20px;
                 .login--email {
@@ -1558,6 +1563,7 @@
             flex-direction: column;
             row-gap: 5px;
             position: relative;
+            transition: $ease-fx;
             &_name {
                 font-size: 20px;
                 .register--name {
@@ -1646,24 +1652,49 @@
 // ◄◄|==========|==========|==========|==========|==========|==========|►►
 // ►►►►►►►►►►| #(ABOUT US) start |•
 #aboutus {
-    z-index: 8;
+    z-index: 5;
     margin-top: 4px;
     position: relative;
     transform: translateX(-50%);
     left: 50%;
     width: 1424px;
+    height: 700px;
     // @include test-border;
     @include df-center();
     flex-direction: column;
     // background: linear-gradient(to right, rgb(128,255,0), rgb(0,255,128));
     .aboutus {
         width: 100%;
+        height: 100%;
         background-color: var(--bgColor);
-        &__header {}
-        &__description {}
+        box-sizing: border-box;
+        padding: 40px;
+        &__header {
+            font-size: 24px;
+            margin-bottom: 30px;
+        }
+        &__description {
+            border: 1px solid yellowgreen;
+        }
         &__gallery {
+            margin-top: 40px;
+            box-sizing: border-box;
+            border: none;
+            @include df-center();
+            flex-wrap: wrap;
+            gap: 10px;
             &--imgcards {
-                &_image {}
+                box-sizing: border-box;
+                border: 1px solid rgb(128,128,128);
+                border-radius: 8px;
+                width: 340px;
+                height: 200px;
+                overflow: hidden;
+                &_image {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
         }
     }
