--- a/04 ■► React/CODERS Denmark/starter-react/src/components/Header/style.module.css
+++ b/04 ■► React/CODERS Denmark/starter-react/src/components/Header/style.module.css
@@ -1,8 +1,27 @@
 /* styles of header */
-#header {}
+#header {
+    color: var(--text-color);
+    /* border: 1px solid var(--additional-borderRS); */
+    background: linear-gradient(to top, rgb(12,12,12), rgb(48,48,48));
+    border: none;
+    border-bottom: 1px solid rgb(64,64,64);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0 25px;
+    width: 100%;
+    height: 60px;
+}
 
 /* container of menu items */
 .menus {
+    position: relative;
+
+    width: 100%;
+    column-gap: 60px;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,5 +29,22 @@
 
 /* select menu items */
 .menus__items {
-    background-color: greenyellow;
+    font-weight: 600;
+}
+
+/* selected mark */
+.menus__selected {
+    position: absolute;
+    top: 50%;
+    left: 27%; /* Home 27, About 34, Contact 41.5, Portfolios 50, Journey 59.3, Blog 67.7 */
+
+    transform: translate(-50%, -50%);
+
+    width: 8px;
+    height: 8px;
+    
+    border-radius: 50%;
+    border: 1px solid var(--marks-orange);
+    background: radial-gradient(var(--additional-clrWH), var(--additional-clrWH), var(--marks-orange));
+    filter: drop-shadow(0 0 3px var(--marks-orange));
 }
