--- a/04 ■► React/CODERS Denmark/starter-react/src/components/Footer/style.module.css
+++ b/04 ■► React/CODERS Denmark/starter-react/src/components/Footer/style.module.css
@@ -7,8 +7,9 @@
     border-top: 1px solid rgb(64,64,64);
 
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    column-gap: 300px;
 
     padding: 0 25px;
     width: 100%;
