--- a/04 ■► React/final-app/src/global.css
+++ b/04 ■► React/final-app/src/global.css
@@ -46,7 +46,7 @@
   text-decoration: none;
   font-size: 14px;
   font-weight: 500;
-  font-family: "Roboto", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: var(--dark-black);
 }
 
