--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -1,10 +1,48 @@
 .header {
-  background-color: var(--light-yellow);
+  width: 100vw;
+  height: 80px;
+  background-color: var(--dark-white);
+  border: none;
+  border-bottom: 1px solid var(--mid-grey);
 }
 .header__list {
+  width: 100%;
+  height: 30px;
   background-color: transparent;
-  border: 1px solid var(--dark-navy);
+  border: none;
+  border-bottom: 1px solid var(--dark-black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  background: linear-gradient(to bottom, var(--mid-black), var(--dark-grey));
 }
 .header__list_buttons {
-  border-bottom: 1px solid var(--dark-black);
+  border: none;
+  border-bottom: 1px solid var(--light-white);
+  background-color: transparent;
+  color: var(--light-white);
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: capitalize;
+  transition: var(--quick-fx);
+}
+.header__list_buttons:hover {
+  scale: 1.01;
+  color: var(--light-red);
+  border-bottom: 1px solid var(--light-red);
+  filter: drop-shadow(0 0 3px var(--mid-black));
+}
+.header__list_buttons:active {
+  transition: var(--instant-fx);
+  color: var(--mid-red);
+  border-bottom: 1px solid var(--mid-red);
+  filter: drop-shadow(0 0 8px var(--light-red));
+}
+.header__main {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=index.module.css.map */
